pruebas/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    DECIMAL
    DEF
    DOBPUNTO
    ELIF
    FOR
    IN
    MAYIGUAL
    MENIGUAL
    NIGUALQUE
    PRINT
    RANGE

Grammar

Rule 0     S' -> program
Rule 1     program -> function program
Rule 2     program -> external-declaration program
Rule 3     program -> empty
Rule 4     external-declaration -> type assignment PTCOMA
Rule 5     declaration -> type assignment PTCOMA
Rule 6     declaration -> assignment PTCOMA
Rule 7     declaration -> function_call PTCOMA
Rule 8     assignment -> ID IGUAL assignment
Rule 9     assignment -> ID IGUAL function_call
Rule 10    assignment -> ID COMA assignment
Rule 11    assignment -> ENTERO COMA assignment
Rule 12    assignment -> ID MAS assignment
Rule 13    assignment -> ID MENOS assignment
Rule 14    assignment -> ID POR assignment
Rule 15    assignment -> ID DIVIDIDO assignment
Rule 16    assignment -> ENTERO MAS assignment
Rule 17    assignment -> ENTERO MENOS assignment
Rule 18    assignment -> ENTERO POR assignment
Rule 19    assignment -> ENTERO DIVIDIDO assignment
Rule 20    assignment -> STRING
Rule 21    assignment -> PARIZQ assignment PARDER
Rule 22    assignment -> MENOS assignment
Rule 23    assignment -> ENTERO MAS MAS
Rule 24    assignment -> ID MAS MAS
Rule 25    assignment -> ENTERO MENOS MENOS
Rule 26    assignment -> ID MENOS MENOS
Rule 27    assignment -> ENTERO
Rule 28    assignment -> ID
Rule 29    function_call -> ID PARIZQ PARDER
Rule 30    function_call -> ID PARIZQ assignment PARDER
Rule 31    function -> type ID PARIZQ argument_list_option PARDER compound_statement
Rule 32    argument_list_option -> argument_list
Rule 33    argument_list_option -> empty
Rule 34    argument_list -> argument_list COMA argument
Rule 35    argument_list -> argument
Rule 36    argument -> type ID
Rule 37    compound_statement -> LLAVIZQ statement_list LLAVDER
Rule 38    statement_list -> statement_list statement
Rule 39    statement_list -> empty
Rule 40    statement -> iteration_statement
Rule 41    statement -> declaration
Rule 42    statement -> selection_statement
Rule 43    statement -> return-statement
Rule 44    type -> INT
Rule 45    type -> FLOAT
Rule 46    type -> CHAR
Rule 47    type -> VOID
Rule 48    iteration_statement -> WHILE PARIZQ expression PARDER compound_statement
Rule 49    iteration_statement -> WHILE PARIZQ expression PARDER statement
Rule 50    selection_statement -> IF PARIZQ expression PARDER compound_statement
Rule 51    selection_statement -> IF PARIZQ expression PARDER statement
Rule 52    selection_statement -> IF PARIZQ expression PARDER compound_statement ELSE compound_statement
Rule 53    selection_statement -> IF PARIZQ expression PARDER compound_statement ELSE statement
Rule 54    selection_statement -> IF PARIZQ expression PARDER statement ELSE compound_statement
Rule 55    selection_statement -> IF PARIZQ expression PARDER statement ELSE statement
Rule 56    return-statement -> RETURN PTCOMA
Rule 57    return-statement -> RETURN expression PTCOMA
Rule 58    expression -> expression IGUALQUE expression
Rule 59    expression -> expression MENQUE expression
Rule 60    expression -> expression MAYQUE expression
Rule 61    expression -> expression AND expression
Rule 62    expression -> expression OR expression
Rule 63    expression -> assignment
Rule 64    empty -> <empty>

Terminals, with rules where they appear

AND                  : 61
BREAK                : 
CHAR                 : 46
COMA                 : 10 11 34
DECIMAL              : 
DEF                  : 
DIVIDIDO             : 15 19
DOBPUNTO             : 
ELIF                 : 
ELSE                 : 52 53 54 55
ENTERO               : 11 16 17 18 19 23 25 27
FLOAT                : 45
FOR                  : 
ID                   : 8 9 10 12 13 14 15 24 26 28 29 30 31 36
IF                   : 50 51 52 53 54 55
IGUAL                : 8 9
IGUALQUE             : 58
IN                   : 
INT                  : 44
LLAVDER              : 37
LLAVIZQ              : 37
MAS                  : 12 16 23 23 24 24
MAYIGUAL             : 
MAYQUE               : 60
MENIGUAL             : 
MENOS                : 13 17 22 25 25 26 26
MENQUE               : 59
NIGUALQUE            : 
OR                   : 62
PARDER               : 21 29 30 31 48 49 50 51 52 53 54 55
PARIZQ               : 21 29 30 31 48 49 50 51 52 53 54 55
POR                  : 14 18
PRINT                : 
PTCOMA               : 4 5 6 7 56 57
RANGE                : 
RETURN               : 56 57
STRING               : 20
VOID                 : 47
WHILE                : 48 49
error                : 

Nonterminals, with rules where they appear

argument             : 34 35
argument_list        : 32 34
argument_list_option : 31
assignment           : 4 5 6 8 10 11 12 13 14 15 16 17 18 19 21 22 30 63
compound_statement   : 31 48 50 52 52 53 54
declaration          : 41
empty                : 3 33 39
expression           : 48 49 50 51 52 53 54 55 57 58 58 59 59 60 60 61 61 62 62
external-declaration : 2
function             : 1
function_call        : 7 9
iteration_statement  : 40
program              : 1 2 0
return-statement     : 43
selection_statement  : 42
statement            : 38 49 51 53 54 55 55
statement_list       : 37 38
type                 : 4 5 31 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function program
    (2) program -> . external-declaration program
    (3) program -> . empty
    (31) function -> . type ID PARIZQ argument_list_option PARDER compound_statement
    (4) external-declaration -> . type assignment PTCOMA
    (64) empty -> .
    (44) type -> . INT
    (45) type -> . FLOAT
    (46) type -> . CHAR
    (47) type -> . VOID

    $end            reduce using rule 64 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    VOID            shift and go to state 9

    program                        shift and go to state 1
    function                       shift and go to state 2
    external-declaration           shift and go to state 3
    empty                          shift and go to state 4
    type                           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> function . program
    (1) program -> . function program
    (2) program -> . external-declaration program
    (3) program -> . empty
    (31) function -> . type ID PARIZQ argument_list_option PARDER compound_statement
    (4) external-declaration -> . type assignment PTCOMA
    (64) empty -> .
    (44) type -> . INT
    (45) type -> . FLOAT
    (46) type -> . CHAR
    (47) type -> . VOID

    $end            reduce using rule 64 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    VOID            shift and go to state 9

    function                       shift and go to state 2
    program                        shift and go to state 10
    external-declaration           shift and go to state 3
    empty                          shift and go to state 4
    type                           shift and go to state 5

state 3

    (2) program -> external-declaration . program
    (1) program -> . function program
    (2) program -> . external-declaration program
    (3) program -> . empty
    (31) function -> . type ID PARIZQ argument_list_option PARDER compound_statement
    (4) external-declaration -> . type assignment PTCOMA
    (64) empty -> .
    (44) type -> . INT
    (45) type -> . FLOAT
    (46) type -> . CHAR
    (47) type -> . VOID

    $end            reduce using rule 64 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    VOID            shift and go to state 9

    external-declaration           shift and go to state 3
    program                        shift and go to state 11
    function                       shift and go to state 2
    empty                          shift and go to state 4
    type                           shift and go to state 5

state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (31) function -> type . ID PARIZQ argument_list_option PARDER compound_statement
    (4) external-declaration -> type . assignment PTCOMA
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    ID              shift and go to state 12
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 14

state 6

    (44) type -> INT .

    ID              reduce using rule 44 (type -> INT .)
    ENTERO          reduce using rule 44 (type -> INT .)
    STRING          reduce using rule 44 (type -> INT .)
    PARIZQ          reduce using rule 44 (type -> INT .)
    MENOS           reduce using rule 44 (type -> INT .)


state 7

    (45) type -> FLOAT .

    ID              reduce using rule 45 (type -> FLOAT .)
    ENTERO          reduce using rule 45 (type -> FLOAT .)
    STRING          reduce using rule 45 (type -> FLOAT .)
    PARIZQ          reduce using rule 45 (type -> FLOAT .)
    MENOS           reduce using rule 45 (type -> FLOAT .)


state 8

    (46) type -> CHAR .

    ID              reduce using rule 46 (type -> CHAR .)
    ENTERO          reduce using rule 46 (type -> CHAR .)
    STRING          reduce using rule 46 (type -> CHAR .)
    PARIZQ          reduce using rule 46 (type -> CHAR .)
    MENOS           reduce using rule 46 (type -> CHAR .)


state 9

    (47) type -> VOID .

    ID              reduce using rule 47 (type -> VOID .)
    ENTERO          reduce using rule 47 (type -> VOID .)
    STRING          reduce using rule 47 (type -> VOID .)
    PARIZQ          reduce using rule 47 (type -> VOID .)
    MENOS           reduce using rule 47 (type -> VOID .)


state 10

    (1) program -> function program .

    $end            reduce using rule 1 (program -> function program .)


state 11

    (2) program -> external-declaration program .

    $end            reduce using rule 2 (program -> external-declaration program .)


state 12

    (31) function -> type ID . PARIZQ argument_list_option PARDER compound_statement
    (8) assignment -> ID . IGUAL assignment
    (9) assignment -> ID . IGUAL function_call
    (10) assignment -> ID . COMA assignment
    (12) assignment -> ID . MAS assignment
    (13) assignment -> ID . MENOS assignment
    (14) assignment -> ID . POR assignment
    (15) assignment -> ID . DIVIDIDO assignment
    (24) assignment -> ID . MAS MAS
    (26) assignment -> ID . MENOS MENOS
    (28) assignment -> ID .

    PARIZQ          shift and go to state 18
    IGUAL           shift and go to state 19
    COMA            shift and go to state 20
    MAS             shift and go to state 21
    MENOS           shift and go to state 22
    POR             shift and go to state 23
    DIVIDIDO        shift and go to state 24
    PTCOMA          reduce using rule 28 (assignment -> ID .)


state 13

    (21) assignment -> PARIZQ . assignment PARDER
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 25

state 14

    (4) external-declaration -> type assignment . PTCOMA

    PTCOMA          shift and go to state 27


state 15

    (11) assignment -> ENTERO . COMA assignment
    (16) assignment -> ENTERO . MAS assignment
    (17) assignment -> ENTERO . MENOS assignment
    (18) assignment -> ENTERO . POR assignment
    (19) assignment -> ENTERO . DIVIDIDO assignment
    (23) assignment -> ENTERO . MAS MAS
    (25) assignment -> ENTERO . MENOS MENOS
    (27) assignment -> ENTERO .

    COMA            shift and go to state 28
    MAS             shift and go to state 29
    MENOS           shift and go to state 30
    POR             shift and go to state 31
    DIVIDIDO        shift and go to state 32
    PTCOMA          reduce using rule 27 (assignment -> ENTERO .)
    PARDER          reduce using rule 27 (assignment -> ENTERO .)
    IGUALQUE        reduce using rule 27 (assignment -> ENTERO .)
    MENQUE          reduce using rule 27 (assignment -> ENTERO .)
    MAYQUE          reduce using rule 27 (assignment -> ENTERO .)
    AND             reduce using rule 27 (assignment -> ENTERO .)
    OR              reduce using rule 27 (assignment -> ENTERO .)


state 16

    (22) assignment -> MENOS . assignment
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 33

state 17

    (20) assignment -> STRING .

    PTCOMA          reduce using rule 20 (assignment -> STRING .)
    PARDER          reduce using rule 20 (assignment -> STRING .)
    IGUALQUE        reduce using rule 20 (assignment -> STRING .)
    MENQUE          reduce using rule 20 (assignment -> STRING .)
    MAYQUE          reduce using rule 20 (assignment -> STRING .)
    AND             reduce using rule 20 (assignment -> STRING .)
    OR              reduce using rule 20 (assignment -> STRING .)


state 18

    (31) function -> type ID PARIZQ . argument_list_option PARDER compound_statement
    (32) argument_list_option -> . argument_list
    (33) argument_list_option -> . empty
    (34) argument_list -> . argument_list COMA argument
    (35) argument_list -> . argument
    (64) empty -> .
    (36) argument -> . type ID
    (44) type -> . INT
    (45) type -> . FLOAT
    (46) type -> . CHAR
    (47) type -> . VOID

    PARDER          reduce using rule 64 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    VOID            shift and go to state 9

    type                           shift and go to state 34
    argument_list_option           shift and go to state 35
    argument_list                  shift and go to state 36
    empty                          shift and go to state 37
    argument                       shift and go to state 38

state 19

    (8) assignment -> ID IGUAL . assignment
    (9) assignment -> ID IGUAL . function_call
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID
    (29) function_call -> . ID PARIZQ PARDER
    (30) function_call -> . ID PARIZQ assignment PARDER

    ID              shift and go to state 39
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 40
    function_call                  shift and go to state 41

state 20

    (10) assignment -> ID COMA . assignment
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 42

state 21

    (12) assignment -> ID MAS . assignment
    (24) assignment -> ID MAS . MAS
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    MAS             shift and go to state 43
    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 44

state 22

    (13) assignment -> ID MENOS . assignment
    (26) assignment -> ID MENOS . MENOS
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    MENOS           shift and go to state 45
    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13

    assignment                     shift and go to state 46

state 23

    (14) assignment -> ID POR . assignment
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 47

state 24

    (15) assignment -> ID DIVIDIDO . assignment
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 48

state 25

    (21) assignment -> PARIZQ assignment . PARDER

    PARDER          shift and go to state 49


state 26

    (8) assignment -> ID . IGUAL assignment
    (9) assignment -> ID . IGUAL function_call
    (10) assignment -> ID . COMA assignment
    (12) assignment -> ID . MAS assignment
    (13) assignment -> ID . MENOS assignment
    (14) assignment -> ID . POR assignment
    (15) assignment -> ID . DIVIDIDO assignment
    (24) assignment -> ID . MAS MAS
    (26) assignment -> ID . MENOS MENOS
    (28) assignment -> ID .

    IGUAL           shift and go to state 19
    COMA            shift and go to state 20
    MAS             shift and go to state 21
    MENOS           shift and go to state 22
    POR             shift and go to state 23
    DIVIDIDO        shift and go to state 24
    PARDER          reduce using rule 28 (assignment -> ID .)
    PTCOMA          reduce using rule 28 (assignment -> ID .)
    IGUALQUE        reduce using rule 28 (assignment -> ID .)
    MENQUE          reduce using rule 28 (assignment -> ID .)
    MAYQUE          reduce using rule 28 (assignment -> ID .)
    AND             reduce using rule 28 (assignment -> ID .)
    OR              reduce using rule 28 (assignment -> ID .)


state 27

    (4) external-declaration -> type assignment PTCOMA .

    INT             reduce using rule 4 (external-declaration -> type assignment PTCOMA .)
    FLOAT           reduce using rule 4 (external-declaration -> type assignment PTCOMA .)
    CHAR            reduce using rule 4 (external-declaration -> type assignment PTCOMA .)
    VOID            reduce using rule 4 (external-declaration -> type assignment PTCOMA .)
    $end            reduce using rule 4 (external-declaration -> type assignment PTCOMA .)


state 28

    (11) assignment -> ENTERO COMA . assignment
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 50

state 29

    (16) assignment -> ENTERO MAS . assignment
    (23) assignment -> ENTERO MAS . MAS
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    MAS             shift and go to state 51
    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 52

state 30

    (17) assignment -> ENTERO MENOS . assignment
    (25) assignment -> ENTERO MENOS . MENOS
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    MENOS           shift and go to state 53
    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13

    assignment                     shift and go to state 54

state 31

    (18) assignment -> ENTERO POR . assignment
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 55

state 32

    (19) assignment -> ENTERO DIVIDIDO . assignment
    (8) assignment -> . ID IGUAL assignment
    (9) assignment -> . ID IGUAL function_call
    (10) assignment -> . ID COMA assignment
    (11) assignment -> . ENTERO COMA assignment
    (12) assignment -> . ID MAS assignment
    (13) assignment -> . ID MENOS assignment
    (14) assignment -> . ID POR assignment
    (15) assignment -> . ID DIVIDIDO assignment
    (16) assignment -> . ENTERO MAS assignment
    (17) assignment -> . ENTERO MENOS assignment
    (18) assignment -> . ENTERO POR assignment
    (19) assignment -> . ENTERO DIVIDIDO assignment
    (20) assignment -> . STRING
    (21) assignment -> . PARIZQ assignment PARDER
    (22) assignment -> . MENOS assignment
    (23) assignment -> . ENTERO MAS MAS
    (24) assignment -> . ID MAS MAS
    (25) assignment -> . ENTERO MENOS MENOS
    (26) assignment -> . ID MENOS MENOS
    (27) assignment -> . ENTERO
    (28) assignment -> . ID

    ID              shift and go to state 26
    ENTERO          shift and go to state 15
    STRING          shift and go to state 17
    PARIZQ          shift and go to state 13
    MENOS           shift and go to state 16

    assignment                     shift and go to state 56

state 33

    (22) assignment -> MENOS assignment .

    PTCOMA          reduce using rule 22 (assignment -> MENOS assignment .)
    PARDER          reduce using rule 22 (assignment -> MENOS assignment .)
    IGUALQUE        reduce using rule 22 (assignment -> MENOS assignment .)
    MENQUE          reduce using rule 22 (assignment -> MENOS assignment .)
    MAYQUE          reduce using rule 22 (assignment -> MENOS assignment .)
    AND             reduce using rule 22 (assignment -> MENOS assignment .)
    OR              reduce using rule 22 (assignment -> MENOS assignment .)


state 34

    (36) argument -> type . ID

    ID              shift and go to state 57


state 35

    (31) function -> type ID PARIZQ argument_list_option . PARDER compound_statement

    PARDER          shift and go to state 58


state 36

    (32) argument_list_option -> argument_list .
    (34) argument_list -> argument_list . COMA argument

    PARDER          reduce using rule 32 (argument_list_option -> argument_list .)
    COMA            shift and go to state 59


state 37

    (33) argument_list_option -> empty .

    PARDER          reduce using rule 33 (argument_list_option -> empty .)


state 38

    (35) argument_list -> argument .
